--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^6.17.1",
+    "next": "15.5.5",
+    "next-auth": "^4.24.11",
+    "openai": "^6.4.0",
+    "prisma": "^6.17.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.5"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5"
   }
 }
