--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-  "dev": "next dev",
-  "docker:up": "docker-compose up -d",
-  "docker:down": "docker-compose down",
-  "dev:stack": "concurrently \"npm run docker:up\" \"wait-on tcp:5432 && npm run dev\""
-},
+    "dev": "next dev",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "dev:stack": "concurrently \"npm run docker:up\" \"wait-on tcp:5432 && npm run dev\""
+  },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.17.1",
     "next": "15.5.5",
     "next-auth": "^4.24.11",
