--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.17.1",
+    "framer-motion": "^12.23.24",
     "next": "15.5.5",
     "next-auth": "^4.24.11",
-    "openai": "^6.4.0",
+    "openai": "^6.7.0",
     "prisma": "^6.17.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
