--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.17.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.548.0",
     "next": "15.5.5",
     "next-auth": "^4.24.11",
     "openai": "^6.7.0",
