--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,30 +1,28 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:15
-    container_name: postgres_local
+    container_name: studymate_postgres
     restart: always
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: mydb
+      POSTGRES_USER: studymate_user
+      POSTGRES_PASSWORD: studymate_pass
+      POSTGRES_DB: studymate_db
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - studymate_postgres_data:/var/lib/postgresql/data
 
   pgadmin:
     image: dpage/pgadmin4
-    container_name: pgadmin_local
+    container_name: studymate_pgadmin
     restart: always
     ports:
       - "5050:80"
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_EMAIL: admin@studymate.com
       PGADMIN_DEFAULT_PASSWORD: admin
     depends_on:
       - postgres
 
 volumes:
-  postgres_data:
+  studymate_postgres_data:
