--- a/package.json
+++ b/package.json
@@ -6,32 +6,37 @@
     "dev": "next dev",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
-    "dev:stack": "concurrently \"npm run docker:up\" \"wait-on tcp:5432 && npm run dev\""
+    "dev:stack": "concurrently \"npm run docker:up\" \"wait-on tcp:5432 && npm run dev\"",
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.18.0",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.548.0",
     "next": "15.5.5",
     "next-auth": "^4.24.11",
     "openai": "^6.7.0",
-    "prisma": "^6.18.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/node": "^20.19.23",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "concurrently": "^9.2.1",
     "postcss": "^8.5.6",
+    "prisma": "^6.18.0",
     "tailwindcss": "^3.4.14",
-    "typescript": "^5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3",
     "wait-on": "^9.0.1"
   }
 }
