--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "openai": "^6.7.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sharp": "^0.34.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
