--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.18.0",
     "@radix-ui/react-progress": "^1.1.7",
@@ -24,6 +25,7 @@
     "next-auth": "^4.24.11",
     "openai": "^6.7.0",
     "react": "19.1.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "19.1.0",
     "sharp": "^0.34.4",
     "tailwind-merge": "^3.3.1",
