--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+
+
+# sekrety serwerowe (nie trafiają do GitHub)
+server_files/
+
+
+# Next / node artefakty
+.next/
+node_modules/
+
+
+
+
 # dependencies
 /node_modules
 /.pnp
