--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       POSTGRES_USER: studymate_user
       POSTGRES_PASSWORD: studymate_pass
-      POSTGRES_DB: studymate_db
+      POSTGRES_DB: studymate_restored
     volumes:
       - studymate_postgres_data:/var/lib/postgresql/data
 
