--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "19.1.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "19.1.0",
+    "recharts": "^3.5.0",
     "sharp": "^0.34.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
