--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "country-flag-icons": "^1.5.21",
     "framer-motion": "^12.23.24",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.548.0",
     "next": "15.5.5",
     "next-auth": "^4.24.11",
